--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ asgiref==3.6.0
 autopep8==2.0.2
 decouple==0.0.7
 Django==4.2
+Pillow==9.5.0
 pycodestyle==2.10.0
 python-decouple==3.8
 python-dotenv==1.0.0
