--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 asgiref==3.6.0
 autopep8==2.0.2
-decouple==0.0.7
 Django==4.2
+django-cleanup==7.0.0
 Pillow==9.5.0
 pycodestyle==2.10.0
 python-decouple==3.8
